// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sinonToBeCalled .not fails with any argument passed 1`] = `
"expect(received).not.sinonToBeCalled()

Matcher error: this matcher must not have an expected argument

Expected has type:  number
Expected has value: 555"
`;

exports[`sinonToBeCalled .not passes when called 1`] = `
"expect(sinon.spy()).sinonToBeCalled()

Expected number of calls: >= 1
Received number of calls:    0"
`;

exports[`sinonToBeCalled fails with any argument passed 1`] = `
"expect(received).sinonToBeCalled()

Matcher error: this matcher must not have an expected argument

Expected has type:  number
Expected has value: 555"
`;

exports[`sinonToBeCalled includes the custom mock name in the error message 1`] = `
"expect(named-mock).not.sinonToBeCalled()

Expected number of calls: 0
Received number of calls: 1

1: called with 0 arguments"
`;

exports[`sinonToBeCalled passes when called 1`] = `
"expect(sinon.spy()).not.sinonToBeCalled()

Expected number of calls: 0
Received number of calls: 1

1: \\"arg0\\", \\"arg1\\", \\"arg2\\""
`;

exports[`sinonToBeCalled works only on spies or jest.fn 1`] = `
"expect(received).sinonToBeCalled()

Matcher error: received value must be a stub or spy function

Received has type:  function
Received has value: [Function fn]"
`;
